# librg

./: .clangd.example  .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  appveyor.yml  build-emscripten.sh  build.bat  build.sh  package-lock.json  package.json
.github/codeql/: config.yml
.github/workflows/: codeql-analysis.yml  notify-release.yml  tests.yml
code/: build.bat  lib.c  librg.h  librg_enet.h  librg_hedley.h  project.4coder  rg_lib.h  zpl.h
code/apps/: example-enet.c  example-packing.c  example-simple.c  example-unpacking.c  example-world.c  library.c  main.c  manual-testing.c  query-performance.c
code/header/: context.h  entity.h  general.h  packing.h  query.h  types.h  world.h
code/source/: context.c  entity.c  general.c  packing.c  query.c  types.c  world.c
code/tests/: unit.c  unit.h
code/tests/cases/: entity.h  general.h  packing.h  query.h
code/tests/unit/: context.h  entity.h  general.h  query.h  world.h
docs/: README.md  _coverpage.md  _sidebar.md  allocators.md  compiletime.md  index.html  migration.md  quickstart.md
docs/defs/: config.md  entity.md  events.md  packing.md  query.md  types.md  utils.md  world.md
docs/methods/: constants.md  general.md
include/: librg.h  librg_components.h  librg_limiter.h
misc/: CMakeLists.txt  embed.sh  packager.js  shell.bat  vs17.bat
other/: librg_components.h  librg_limiter.h
scripts/: build-c.sh  build-cpp.sh  build-emscripten.sh  build-pkg.js  build.bat  cmake-vs2017.bat
test/: bitstream.c  build-test.c  build-test.cpp  cli-client.c  cli-server.c  client-spawner.js  client.c  demo-client.c  demo-defines.h  demo-server.c  ent.c  entity-share.c  entity.c  event.c  library.c  main.c  server.c  streamer-perf.c  streamer.c  tbl.c  testing.c  timeoutc.c  timeouts.c
web/: clean.sh  setup.sh
